--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load ="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Пошук зображень</title>
+  <link rel="stylesheet" href="" />
+  <link rel="stylesheet" href="" />
+</head>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+<body>
+  <p><a class="main-link" href="index.html">Go back</a></p>
 
-    <script type="module" src="./main.js"></script>
-  </body>
+  <input type="text" id="search-box" />
+  <button type="button" data-start-timer>Search</button>
+
+  <script src="" type="module"></script>
+</body>
+
 </html>
